Added local floor plan upload and saving
